mobile view complete

--- a/index.html
+++ b/index.html
@@ -26,21 +26,21 @@
       devices. Our Mac and iOS apps will<br> help you organize everything.</p>
     </header>
 
-    <section>
+    <section class="first-section">
       <img src="images/image-computer.png" alt="">
       <h3>Quick Search</h3>
       <p>Easily search your snippets by content, category, web address, application, and more.</p>
 
       <h3>iCloud Sync</h3>
-      <p>Instantly saves and syncs snippets across all your devices.</p>
+      <p>Instantly saves and syncs snippets<br> across all your devices.</p>
 
       <h3>Complete History</h3>
-      <p>Retrieve any snippets from the first moment you started using the app.</p>
+      <p>Retrieve any snippets from the first<br> moment you started using the app.</p>
     </section>
 
-    <section>
+    <section class="second-section">
       <h2>Access Clipboard anywhere</h2>
-      <p>Whether you’re on the go, or at your computer, you can access all your Clipboard 
+      <p>Whether you’re on the go, or at your computer, you can access all your<br> Clipboard 
       snippets in a few simple clicks.</p>
 
       <img src="images/image-devices.png" alt="">
@@ -49,10 +49,10 @@
       <p>We’ve got the tools to boost your productivity.</p>
     </section>
 
-    <section>
+    <section class="third-section">
       <img src="images/icon-blacklist.svg" alt="">
       <h3>Create blacklists</h3>
-      <p>Ensure sensitive information never makes its way to your clipboard by excluding certain sources.</p>
+      <p>Ensure sensitive information never makes its<br> way to your clipboard by excluding<br> certain sources.</p>
 
       <img src="images/icon-text.svg" alt="">
       <h3>Plain text snippets</h3>
@@ -63,7 +63,7 @@
       <p>Quick preview of all snippets on your Clipboard for easy access.</p>
     </section>
 
-    <section>
+    <section class="fourth-section">
       <img src="images/logo-google.png" alt="">
       <img src="images/logo-ibm.png" alt="">
       <img src="images/logo-microsoft.png" alt="">
@@ -71,10 +71,10 @@
       <img src="images/logo-vector-graphics.png" alt="">
     </section>
 
-    <section>
+    <section class="fifth-section">
       <h2>Clipboard for iOS and Mac OS</h2>
 
-      <p>Available for free on the App Store. Download for Mac or iOS, sync with iCloud 
+      <p>Available for free on the App Store.<br> Download for Mac or iOS, sync with<br> iCloud 
       and you’re ready to start adding to your clipboard.</p>
     
       <button>Download for iOS</button>
@@ -83,11 +83,16 @@
 
     <footer>
       <img src="images/logo.svg" alt="">
-      FAQs
-      Contact Us
-      Privacy Policy
-      Press Kit
-      Install Guide
+      <p>FAQs</p>
+      <p>Contact Us</p>
+      <p>Privacy Policy</p>
+      <p>Press Kit</p>
+      <p>Install Guide</p>
+      <div class="icons">
+        <img src="images/icon-facebook.svg" alt="">
+        <img src="images/icon-twitter.svg" alt="">
+        <img src="images/icon-instagram.svg" alt="">
+      </div>
     </footer>
   </main>
 </body>
