--- a/index.html
+++ b/index.html
@@ -10,76 +10,78 @@
 
 </head>
 <body>
-  <main class="container">
-    <header>
-      <img src="images/logo.svg" alt="logo">
-      <h1>A history of everything you copy</h1>
+  <div class="wrapper">
+    <main class="container">
+      <header>
+        <img src="images/logo.svg" alt="logo">
+        <h1>A history of everything you copy</h1>
 
-      <p>Clipboard allows you to track and <br>organize everything you
-      copy. Instantly access your clipboard on all your devices.</p>
-      <button>Download for iOS</button>
-      <button>Download for Mac</button>
+        <p>Clipboard allows you to track and <br>organize everything you
+        copy. Instantly access your clipboard on all your devices.</p>
+        <button>Download for iOS</button>
+        <button>Download for Mac</button>
 
-      <h2>Keep track of your snippets</h2>
-      <p>Clipboard instantly stores any item you<br> copy in the cloud, 
-      meaning you can<br> access your snippets immediately on all your 
-      devices. Our Mac and iOS apps will<br> help you organize everything.</p>
-    </header>
+        <h2>Keep track of your snippets</h2>
+        <p>Clipboard instantly stores any item you<br> copy in the cloud, 
+        meaning you can<br> access your snippets immediately on all your 
+        devices. Our Mac and iOS apps will<br> help you organize everything.</p>
+      </header>
 
-    <section class="first-section">
-      <img src="images/image-computer.png" alt="">
-      <h3>Quick Search</h3>
-      <p>Easily search your snippets by content, category, web address, application, and more.</p>
+      <section class="first-section">
+        <img src="images/image-computer.png" alt="">
+        <h3>Quick Search</h3>
+        <p>Easily search your snippets by content, category, web address, application, and more.</p>
 
-      <h3>iCloud Sync</h3>
-      <p>Instantly saves and syncs snippets<br> across all your devices.</p>
+        <h3>iCloud Sync</h3>
+        <p>Instantly saves and syncs snippets<br> across all your devices.</p>
 
-      <h3>Complete History</h3>
-      <p>Retrieve any snippets from the first<br> moment you started using the app.</p>
-    </section>
+        <h3>Complete History</h3>
+        <p>Retrieve any snippets from the first<br> moment you started using the app.</p>
+      </section>
 
-    <section class="second-section">
-      <h2>Access Clipboard anywhere</h2>
-      <p>Whether you’re on the go, or at your computer, you can access all your<br> Clipboard 
-      snippets in a few simple clicks.</p>
+      <section class="second-section">
+        <h2>Access Clipboard anywhere</h2>
+        <p>Whether you’re on the go, or at your computer, you can access all your<br> Clipboard 
+        snippets in a few simple clicks.</p>
 
-      <img src="images/image-devices.png" alt="">
+        <img src="images/image-devices.png" alt="">
 
-      <h2>Supercharge your workflow</h2>
-      <p>We’ve got the tools to boost your productivity.</p>
-    </section>
+        <h2>Supercharge your workflow</h2>
+        <p>We’ve got the tools to boost your productivity.</p>
+      </section>
 
-    <section class="third-section">
-      <img src="images/icon-blacklist.svg" alt="">
-      <h3>Create blacklists</h3>
-      <p>Ensure sensitive information never makes its<br> way to your clipboard by excluding<br> certain sources.</p>
+      <section class="third-section">
+        <img src="images/icon-blacklist.svg" alt="">
+        <h3>Create blacklists</h3>
+        <p>Ensure sensitive information never makes<br> its way to your clipboard by excluding<br> certain sources.</p>
 
-      <img src="images/icon-text.svg" alt="">
-      <h3>Plain text snippets</h3>
-      <p>Remove unwanted formatting from copied text for a consistent look.</p>
+        <img src="images/icon-text.svg" alt="">
+        <h3>Plain text snippets</h3>
+        <p>Remove unwanted formatting from copied text for a consistent look.</p>
 
-      <img src="images/icon-preview.svg" alt="">
-      <h3>Sneak preview</h3>
-      <p>Quick preview of all snippets on your Clipboard for easy access.</p>
-    </section>
+        <img src="images/icon-preview.svg" alt="">
+        <h3>Sneak preview</h3>
+        <p>Quick preview of all snippets on your Clipboard for easy access.</p>
+      </section>
 
-    <section class="fourth-section">
-      <img src="images/logo-google.png" alt="">
-      <img src="images/logo-ibm.png" alt="">
-      <img src="images/logo-microsoft.png" alt="">
-      <img src="images/logo-hp.png" alt="">
-      <img src="images/logo-vector-graphics.png" alt="">
-    </section>
+      <section class="fourth-section">
+        <img src="images/logo-google.png" alt="">
+        <img src="images/logo-ibm.png" alt="">
+        <img src="images/logo-microsoft.png" alt="">
+        <img src="images/logo-hp.png" alt="">
+        <img src="images/logo-vector-graphics.png" alt="">
+      </section>
 
-    <section class="fifth-section">
-      <h2>Clipboard for iOS and Mac OS</h2>
+      <section class="fifth-section">
+        <h2>Clipboard for iOS and Mac OS</h2>
 
-      <p>Available for free on the App Store.<br> Download for Mac or iOS, sync with<br> iCloud 
-      and you’re ready to start adding to your clipboard.</p>
+        <p>Available for free on the App Store.<br> Download for Mac or iOS, sync with<br> iCloud 
+        and you’re ready to start adding to your clipboard.</p>
     
-      <button>Download for iOS</button>
-      <button>Download for Mac</button>
-    </section>
+        <button>Download for iOS</button>
+        <button>Download for Mac</button>
+      </section>
+    </main>
 
     <footer>
       <img src="images/logo.svg" alt="">
@@ -94,6 +96,6 @@
         <img src="images/icon-instagram.svg" alt="">
       </div>
     </footer>
-  </main>
+  </div>
 </body>
 </html>
