media query edit

--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
 
         <p>Clipboard allows you to track and <br>organize everything you
         copy. Instantly access your clipboard on all your devices.</p>
-        <button>Download for iOS</button>
-        <button>Download for Mac</button>
+        <div class="btn">
+          <button>Download for iOS</button>
+          <button>Download for Mac</button>
+        </div>
 
         <h2>Keep track of your snippets</h2>
         <p>Clipboard instantly stores any item you<br> copy in the cloud, 
@@ -28,15 +30,19 @@
       </header>
 
       <section class="first-section">
-        <img src="images/image-computer.png" alt="">
-        <h3>Quick Search</h3>
-        <p>Easily search your snippets by content, category, web address, application, and more.</p>
+        <div class="img-1">
+          <img src="images/image-computer.png" alt="">
+        </div>
+        <div class="write-up">
+          <h3>Quick Search</h3>
+          <p>Easily search your snippets by content, category, web address, application, and more.</p>
 
-        <h3>iCloud Sync</h3>
-        <p>Instantly saves and syncs snippets<br> across all your devices.</p>
+          <h3>iCloud Sync</h3>
+          <p>Instantly saves and syncs snippets<br> across all your devices.</p>
 
-        <h3>Complete History</h3>
-        <p>Retrieve any snippets from the first<br> moment you started using the app.</p>
+          <h3>Complete History</h3>
+          <p>Retrieve any snippets from the first<br> moment you started using the app.</p>
+        </div>
       </section>
 
       <section class="second-section">
@@ -51,17 +57,23 @@
       </section>
 
       <section class="third-section">
-        <img src="images/icon-blacklist.svg" alt="">
-        <h3>Create blacklists</h3>
-        <p>Ensure sensitive information never makes<br> its way to your clipboard by excluding<br> certain sources.</p>
+        <div class="part">
+          <img src="images/icon-blacklist.svg" alt="">
+          <h3>Create blacklists</h3>
+          <p>Ensure sensitive information never makes<br> its way to your clipboard by excluding<br> certain sources.</p>
+        </div>
 
-        <img src="images/icon-text.svg" alt="">
-        <h3>Plain text snippets</h3>
-        <p>Remove unwanted formatting from copied text for a consistent look.</p>
+        <div class="part">
+          <img src="images/icon-text.svg" alt="">
+          <h3>Plain text snippets</h3>
+          <p>Remove unwanted formatting from copied text for a consistent look.</p>
+        </div>
 
-        <img src="images/icon-preview.svg" alt="">
-        <h3>Sneak preview</h3>
-        <p>Quick preview of all snippets on your Clipboard for easy access.</p>
+        <div class="part">
+          <img src="images/icon-preview.svg" alt="">
+          <h3>Sneak preview</h3>
+          <p>Quick preview of all snippets on your Clipboard for easy access.</p>
+        </div>
       </section>
 
       <section class="fourth-section">
