--- a/index.html
+++ b/index.html
@@ -90,18 +90,26 @@
         <p>Available for free on the App Store.<br> Download for Mac or iOS, sync with<br> iCloud 
         and you’re ready to start adding to your clipboard.</p>
     
-        <button>Download for iOS</button>
-        <button>Download for Mac</button>
+        <div class="btn">
+          <button>Download for iOS</button>
+          <button>Download for Mac</button>
+        </div>
       </section>
     </main>
 
     <footer>
-      <img src="images/logo.svg" alt="">
-      <p>FAQs</p>
-      <p>Contact Us</p>
-      <p>Privacy Policy</p>
-      <p>Press Kit</p>
-      <p>Install Guide</p>
+      <div class="left-side">
+        <div class="logo">
+          <img src="images/logo.svg" alt="">
+        </div>
+        <div class="content">
+          <p>FAQs</p>
+          <p>Contact Us</p>
+          <p>Privacy Policy</p>
+          <p>Press Kit</p>
+          <p>Install Guide</p>
+        </div>
+      </div>
       <div class="icons">
         <img src="images/icon-facebook.svg" alt="">
         <img src="images/icon-twitter.svg" alt="">
